--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pip>=24.3.1",
+    "pytest>=8.3.3",
+    "pytest-mock>=3.14.0",
     "spacy>=3.8.2",
 ]
