--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -9,9 +9,305 @@ vars:
   entities_json_file: data/bible_entities.json
   bible_data_json: data/bible_data.json
   bible_data_csv: data/bible_data.csv
+  BOOKS: |
+    Genesis
+    Exodus
+    Leviticus
+    Numbers
+    Deuteronomy
+    Joshua
+    Judges
+    Ruth
+    1 Samuel
+    2 Samuel
+    1 Kings
+    2 Kings
+    1 Chronicles
+    2 Chronicles
+    Ezra
+    Nehemiah
+    Esther
+    Job
+    Psalms
+    Proverbs
+    Ecclesiastes
+    Song of Solomon
+    Isaiah
+    Jeremiah
+    Lamentations
+    Ezekiel
+    Daniel
+    Hosea
+    Joel
+    Amos
+    Obadiah
+    Jonah
+    Micah
+    Nahum
+    Habakkuk
+    Zephaniah
+    Haggai
+    Zechariah
+    Malachi
+    Matthew
+    Mark
+    Luke
+    John
+    Acts
+    Romans
+    1 Corinthians
+    2 Corinthians
+    Galatians
+    Ephesians
+    Philippians
+    Colossians
+    1 Thessalonians
+    2 Thessalonians
+    1 Timothy
+    2 Timothy
+    Titus
+    Philemon
+    Hebrews
+    James
+    1 Peter
+    2 Peter
+    1 John
+    2 John
+    3 John
+    Jude
+    Revelation
+  CHAPTERS: |
+    Genesis:50
+    Exodus:40
+    Leviticus:27
+    Numbers:36
+    Deuteronomy:34
+    Joshua:24
+    Judges:21
+    Ruth:4
+    1 Samuel:31
+    2 Samuel:24
+    1 Kings:22
+    2 Kings:25
+    1 Chronicles:29
+    2 Chronicles:36
+    Ezra:10
+    Nehemiah:13
+    Esther:10
+    Job:42
+    Psalms:150
+    Proverbs:31
+    Ecclesiastes:12
+    Song of Solomon:8
+    Isaiah:66
+    Jeremiah:52
+    Lamentations:5
+    Ezekiel:48
+    Daniel:12
+    Hosea:14
+    Joel:3
+    Amos:9
+    Obadiah:1
+    Jonah:4
+    Micah:7
+    Nahum:3
+    Habakkuk:3
+    Zephaniah:3
+    Haggai:2
+    Zechariah:14
+    Malachi:4
+    Matthew:28
+    Mark:16
+    Luke:24
+    John:21
+    Acts:28
+    Romans:16
+    1 Corinthians:16
+    2 Corinthians:13
+    Galatians:6
+    Ephesians:6
+    Philippians:4
+    Colossians:4
+    1 Thessalonians:5
+    2 Thessalonians:3
+    1 Timothy:6
+    2 Timothy:4
+    Titus:3
+    Philemon:1
+    Hebrews:13
+    James:5
+    1 Peter:5
+    2 Peter:3
+    1 John:5
+    2 John:1
+    3 John:1
+    Jude:1
+    Revelation:22
 
 tasks:
   default: task -a
+
+  ext2:
+    cmds:
+      - |
+        uv run python3 converter.py --input-dir bibles --output-dir data
+
+  load:
+    cmds:
+      - |
+        uv run python3 converter.py \
+          --input-dir bibles \
+          --output-dir data
+          # --extracted-file data/extracted_data.json \
+          # --final-output data/normalized_bible_data.json
+
+  dl-bibles-asv:
+    silent: true
+    vars:
+      VERSIONS: ASV
+    cmds:
+      - |
+        # set -x
+        downloaded_now=0
+        downloaded_already=0
+
+        echo "{{.VERSIONS}}" | tr ',' '\n' | while IFS= read -r version; do
+          echo "{{.BOOKS}}" | while IFS= read -r book; do
+            # Skip empty lines
+            [ -z "$book" ] && continue
+            encoded_book=$(echo "$book" | sed 's/ /%20/g') # Encode spaces in book names
+            mkdir -p "bibles/${version}/${book}"
+
+            # Fetch the total number of chapters for the book
+            total_chapters=$(echo "{{.CHAPTERS}}" | grep -E "^${book}:" | cut -d':' -f2)
+            if [ -z "$total_chapters" ]; then
+              echo "$(date +'%Y-%m-%d %H:%M:%S') Error: No chapter count found for ${book}. Skipping."
+              continue
+            fi
+
+            for ch in $(seq 1 "$total_chapters"); do
+              printf "\n$(date +'%Y-%m-%d %H:%M:%S') Downloaded: ${downloaded_now}, processing ${book}, Chapter ${ch}, Version ${version}..."
+              if [[ ! -f "bibles/${version}/${book}/${ch}.html" ]]; then
+                printf " | downloading now ..."
+                downloaded_now=$((downloaded_now+1))
+                curl -k -s -o "bibles/${version}/${book}/${ch}.html" -w "%{http_code}" \
+                  "https://www.biblegateway.com/passage/?search=${encoded_book}%20${ch}&version=${version}&interface=print" > /dev/null
+              else
+                downloaded_already=$((downloaded_already+1))
+                printf " | already downloaded ..."
+                # echo "$(date +'%Y-%m-%d %H:%M:%S') Already downloaded: ${downloaded_already}, bibles/${version}/${book}/${ch}.html"
+                # continue
+              fi
+
+              # Validate content
+              if ! grep -q "passage-content" "bibles/${version}/${book}/${ch}.html"; then
+                echo "$(date +'%Y-%m-%d %H:%M:%S') Stopping ${book} at Chapter ${ch} for Version ${version} (invalid content)."
+                break
+              fi
+
+              grep -A1 "passage-content passage-class-0" "bibles/${version}/${book}/${ch}.html" > "bibles/${version}/${book}/${ch}.txt"
+              printf " | total downloaded: $((downloaded_now+downloaded_already))"
+            done
+          done
+        done
+
+  verify-extracted-json:
+    cmds:
+      - |
+        printf "number of books: "
+        jq 'keys | length' data/extracted_data.json
+
+        # printf "books:"
+        # jq 'keys' data/extracted_data.json
+
+        printf "chapters in book, 3 john:  "
+        jq '."3 john" | keys | length' data/extracted_data.json
+        printf "chapters in book, Genesis: "
+        jq '.genesis | keys | length' data/extracted_data.json
+
+        printf "verses in a chapter, 3 John 1: "
+        jq '."3 john"."1" | keys | length' data/extracted_data.json
+
+        # printf "verses from chapter, 3 John 1:"
+        # jq '."3 john"."1" | keys' data/extracted_data.json
+
+        printf "total verses in bible: "
+        jq 'to_entries | map(.value | to_entries | map(.value | to_entries | length) | add) | add' data/extracted_data.json
+
+        printf "Consistency of a Specific Verse"
+        jq '."3 john"."1"."1"' data/extracted_data.json
+
+        printf "find null entries:"
+        jq 'to_entries | map(select(.value | to_entries | map(select(.value | to_entries | map(select(.value == null or .value == [])) | length > 0)) | length > 0))' data/extracted_data.json
+
+  quick-analysis:
+    silent: true
+    cmds:
+      - |
+        for t in KJ21 ASV ; do
+          echo "translation: ${t}"
+          echo "files smaller than 1000 bytes:"
+          fd . bibles/${t} --size=-1000b -x ls -al
+          printf "total txt files: "
+          fd . bibles/${t} -e txt | wc -l
+          printf "total html files: "
+          fd . bibles/${t} -e html | wc -l
+          echo
+        done
+
+  dl-bibles:
+    cmds:
+      - task: dl-bibles-asv
+      - task: dl-bibles-kj21
+
+  dl-bibles-kj21:
+    silent: true
+    vars:
+      VERSIONS: KJ21
+    cmds:
+      - |
+        # set -x
+        downloaded_now=0
+        downloaded_already=0
+
+        echo "{{.VERSIONS}}" | tr ',' '\n' | while IFS= read -r version; do
+          echo "{{.BOOKS}}" | while IFS= read -r book; do
+            # Skip empty lines
+            [ -z "$book" ] && continue
+            encoded_book=$(echo "$book" | sed 's/ /%20/g') # Encode spaces in book names
+            mkdir -p "bibles/${version}/${book}"
+
+            # Fetch the total number of chapters for the book
+            total_chapters=$(echo "{{.CHAPTERS}}" | grep -E "^${book}:" | cut -d':' -f2)
+            if [ -z "$total_chapters" ]; then
+              echo "$(date +'%Y-%m-%d %H:%M:%S') Error: No chapter count found for ${book}. Skipping."
+              continue
+            fi
+
+            for ch in $(seq 1 "$total_chapters"); do
+              printf "\n$(date +'%Y-%m-%d %H:%M:%S') Downloaded: ${downloaded_now}, processing ${book}, Chapter ${ch}, Version ${version}..."
+              if [[ ! -f "bibles/${version}/${book}/${ch}.html" ]]; then
+                printf " | downloading now ..."
+                downloaded_now=$((downloaded_now+1))
+                curl -k -s -o "bibles/${version}/${book}/${ch}.html" -w "%{http_code}" \
+                  "https://www.biblegateway.com/passage/?search=${encoded_book}%20${ch}&version=${version}&interface=print" > /dev/null
+              else
+                downloaded_already=$((downloaded_already+1))
+                printf " | already downloaded ..."
+                # continue
+              fi
+
+              # Validate content
+              if ! grep -q "passage-content" "bibles/${version}/${book}/${ch}.html"; then
+                echo "$(date +'%Y-%m-%d %H:%M:%S') Stopping ${book} at Chapter ${ch} for Version ${version} (invalid content)."
+                break
+              fi
+
+              grep -A1 "passage-content passage-class-0" "bibles/${version}/${book}/${ch}.html" > "bibles/${version}/${book}/${ch}.txt"
+              printf " | total downloaded: $((downloaded_now+downloaded_already))"
+            done
+          done
+        done
 
   uv-sync:
     cmds:
