--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "pytest>=8.3.3",
     "pytest-mock>=3.14.0",
     "spacy>=3.8.2",
+    "bs4>=0.0.2",
+    "regex>=2024.11.6",
 ]
